[package]
name = "rs-hacks"
version = "0.1.0"
authors = ["Lonami Exo <totufals@hotmail.com>"]
edition = "2018"

[lib]
name = "rshacks"
path = "src/lib.rs"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wincon", "wincontypes", "winbase", "processenv", "ws2def", "winerror", "psapi", "handleapi", "commctrl"] }

[[bin]]
name = "poe"
path = "src/main.rs"

[dependencies]
native-tls = "0.2.3"
libflate = "0.1.27"
