[package]
name = "rs-hacks"
version = "0.1.0"
authors = ["Lonami Exo <totufals@hotmail.com>"]
edition = "2018"

[lib]
name = "rshacks"
path = "src/lib.rs"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wincon", "wincontypes", "winbase", "processenv", "ws2def", "winerror", "psapi", "handleapi", "commctrl", "memoryapi"] }

[[bin]]
name = "poe"
path = "src/main.rs"

[dependencies]
attohttpc = "0.14.0"
chrono = "0.4.19"
lazy_static = "1.4.0"
tinyjson = "2.1.1"
