[package]
name = "rs-hacks"
version = "0.1.0"
authors = ["Lonami Exo <totufals@hotmail.com>"]
edition = "2018"

[lib]
name = "rshacks"
path = "src/lib.rs"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "commctrl",
    "errhandlingapi",
    "handleapi",
    "iphlpapi",
    "memoryapi",
    "processenv",
    "psapi",
    "winbase",
    "wincon",
    "wincontypes",
    "winerror",
    "winuser",
    "ws2def",
] }

[[bin]]
name = "poe"
path = "src/main.rs"

[dependencies]
chrono = "0.4.19"
